# gleason-gradecraft

./: .gitignore  README.md  gleason_classifier.py  pyproject.toml  requirements.txt
docs/: experiment-1.md  experiments.md  how_the_model_is_actually_thinking.md  model_depth.md  resnet_34_50.md  why_skipped.md
src/: gleason_classifier.py  visualize_confusion_matrix.py
