[project]
name = "gleason-gradecraft"
version = "0.1.0"
description = "End-to-end Gleason image classifier with FastAI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastai>=2.8.6",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.1",
    "numpy>=1.24.0",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
