[project]
name = "gleason-gradecraft"
version = "0.1.0"
description = "End-to-end Gleason image classifier with FastAI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastai>=2.8.6",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.1",
    "numpy>=1.24.0",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "optuna-integration[fastaiv2]",
]

# PyTorch with CUDA must be installed from PyTorch's index, not PyPI
# The packages below are excluded from normal dependencies and installed via uv/pip with --extra-index-url

[tool.uv]
# For Grace Hopper (aarch64 + CUDA 12.x), use PyTorch's CUDA builds
extra-index-url = ["https://download.pytorch.org/whl/cu124"]

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
