[project]
name = "gleason-gradecraft"
version = "0.1.0"
description = "End-to-end Gleason image classifier with FastAI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastai>=2.8.6",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.1",
    "numpy>=1.24.0",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "optuna-integration[fastaiv2]",
    "torch>=2.6.0",
    "torchvision>=0.15.0",
]

# PyTorch with CUDA must be installed from PyTorch's index, not PyPI
# The packages below are excluded from normal dependencies and installed via uv/pip with --extra-index-url

[tool.uv]
# Ensure wheels exist for Linux ARM (aarch64) platform
required-environments = ["sys_platform == 'linux' and platform_machine == 'aarch64'"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  # Use CUDA 12.4 wheels on x86_64 Linux or Windows
  { index = "pytorch-cu124", marker = "(sys_platform == 'linux' and platform_machine == 'x86_64') or sys_platform == 'win32'" },
  # Use CUDA 12.6 wheels on Linux aarch64 (ARM)
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" }
]
torchvision = [
  { index = "pytorch-cu124", marker = "(sys_platform == 'linux' and platform_machine == 'x86_64') or sys_platform == 'win32'" },
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" }
]
